--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ button:active.operator  {
     background-color: #924719b9;
 }
 
-.tool {
+.tool,
+.clear {
     background-color: #ffffffb9;
     color: #000000;
 }
